# cadasilcompetitor

./: Makefile  README.md  deep-research-report.md  pyproject.toml
config/: hs_variant_panel.yaml  physiology.yaml
core/: __init__.py  config_loader.py  manifest_loader.py  manifest_registry.py  run_manifest_validation.py
data/: seedMotifs.csv
data/manifests/: aggregate_structures.json  hs_gag_panel.json  off_target_proteins.json
models/: __init__.py  features.py  optimization.py  property_surrogate.py  run_optimization.py  run_property_training.py  run_screening_calibration.py  screening_calibrator.py  surrogate.py
peptide/: __init__.py  config.py  filters.py  generated_candidates_all.csv  generated_candidates_failed.csv  generated_candidates_passed.csv  generator.py  metadata.py  motifs.py  run_generation.py  schema.py  visualization.py
reports/: __init__.py  manifest_validation_summary.md  optimization_proposals.csv  pareto_frontier.csv  property_estimator.json  ranked_candidates.csv  ranked_candidates_sample.csv  run_report.py  screening_calibrator.json  screening_summary.md
scoring/: __init__.py  run_screening.py  screening.py
simulation/: __init__.py  binding_simulation.py  candidate_property_estimation.py  environment.py  occupancy_model.py  reaction_diffusion_model.py
tests/: test_binding_simulation.py  test_generation.py  test_manifest_loader.py  test_manifest_registry.py  test_optimization.py  test_property_surrogate.py  test_reports.py  test_scoring.py  test_screening_calibrator.py
